tests/component_syntax_unsupported/test.js
component Comp() {} // error: unsupported

module.exports = { Comp };
